--- a/lib_eio/core/dune
+++ b/lib_eio/core/dune
@@ -1,4 +1,4 @@
 (library
   (name eio__core)
   (public_name eio.core)
-  (libraries hmap lwt-dllist fmt optint eio.runtime_events))
+  (libraries hmap lwt-dllist fmt optint eio.runtime_events picos_std.structured picos_std.finally))
